--- a/src/app/event/event-resource/event-resource.component.html
+++ b/src/app/event/event-resource/event-resource.component.html
@@ -2,6 +2,7 @@
   <li class="nav-item"><a class="nav-link" routerLink="../"><i class="fa fa-chevron-left"></i></a></li>
   <li class="nav-item"><a class="nav-link" routerLink="view" routerLinkActive="active">View</a></li>
   <li class="nav-item"><a class="nav-link" routerLink="participant" routerLinkActive="active">Participants</a></li>
+  <li class="nav-item"><a class="nav-link" routerLink="volunteer" routerLinkActive="active">Volunteer</a></li>
   <li class="nav-item"><a class="nav-link" routerLink="edit" routerLinkActive="active">Edit</a></li>
   <li class="nav-item"><a class="nav-link" routerLink="delete" routerLinkActive="active"><span class="fa fa-trash"></span></a></li>
 </ul>
