Lorsqu'on clique sur un élément de la liste on est directement redirigé ver la zone d'édition de l'élément.

--- a/src/app/event/volunteer/volunteer-edit/volunteer-edit.component.html
+++ b/src/app/event/volunteer/volunteer-edit/volunteer-edit.component.html
@@ -1,3 +1,1 @@
-<p>
-  volunteer-edit works!
-</p>
+<formio [form]="service.form" [submission]="service.resource" [refresh]="service.refresh" (submit)="onSubmit($event)"></formio> 
