--- a/src/app/event/volunteer/volunteer-edit/volunteer-edit.component.html
+++ b/src/app/event/volunteer/volunteer-edit/volunteer-edit.component.html
@@ -1,1 +1,2 @@
+<h1>THIS IS THE EDIT COMPONENT</h1>
 <formio [form]="service.form" [submission]="service.resource" [refresh]="service.refresh" (submit)="onSubmit($event)"></formio> 
