Lorsqu'on crée ou édite un volontaire, on est maintenant redirigé vers la page d'index.

--- a/src/app/event/volunteer/volunteer-create/volunteer-create.component.html
+++ b/src/app/event/volunteer/volunteer-create/volunteer-create.component.html
@@ -6,5 +6,5 @@
   [hideComponents]="config.parents"
   [error]="onError"
   [success]="onSuccess"
-  (submit)="onSubmit($event)"
+  (submit)="redirect($event)"
 ></formio>
