--- a/src/app/event/volunteer/volunteer-index/volunteer-index.component.html
+++ b/src/app/event/volunteer/volunteer-index/volunteer-index.component.html
@@ -1,5 +1,5 @@
-<!-- <formio-grid (click)="afterLoad(row)" #grid2 src="https://jdggmmtbamlmyav.form.io/volunteer"></formio-grid> -->
 <button routerLink="./new">Créer un nouveau volontaire</button>
+
 <div class="formio-grid"> 
     <formio-alerts [alerts]="grid.alerts">
 
@@ -16,11 +16,9 @@
                 </th> 
             </tr>
          </thead>
-          <formio-loader>
-
-          </formio-loader>
+          <formio-loader></formio-loader>
            <tbody *ngIf="!grid.isLoading">
-                <tr *ngFor="let row of grid.rows" routerLink="../{{row._id}}/edit" (click)="afterLoad(row)"> 
+                <tr *ngFor="let row of grid.rows" routerLink="../../{{row._id}}/edit"> 
                     <td *ngFor="let col of grid.columns" [innerHTML]="grid.data(row, col)"></td>
                  </tr> 
             </tbody>
@@ -32,5 +30,5 @@
                         </td>
                      </tr>
             </tfoot> 
-        </table>
-     </div> 
+    </table>
+</div> 
