--- a/src/app/event/participant/participant-create/participant-create.component.html
+++ b/src/app/event/participant/participant-create/participant-create.component.html
@@ -1,4 +1,4 @@
-<h3 *ngIf="service.form" style="margin-top:0;"><a routerLink="../" class="back-button"><i class="fa fa-chevron-left"></i></a> | New {{ service.form.title }}</h3>
+<h3 *ngIf="service.form" (click)="test()" style="margin-top:0;"><a routerLink="../" class="back-button" ><i class="fa fa-chevron-left"></i></a> | New {{ service.form.title }}</h3>
 <formio
   [form]="service.form"
   [submission]="service.resource"
