--- a/src/app/event/volunteer/volunteer-resource/volunteer-resource.component.html
+++ b/src/app/event/volunteer/volunteer-resource/volunteer-resource.component.html
@@ -1,8 +1,7 @@
-<!-- <p>
-  volunteer-resource works!
-</p> -->
 <ul class="nav nav-tabs" style="margin-bottom: 20px;">
     <li class="nav-item"><a class="nav-link" routerLink="../"><i class="fa fa-chevron-left"></i></a></li>
+    <!-- <li class="nav-item"><a class="nav-link" routerLink="view" routerLinkActive="active">View</a></li> -->
     <!-- <li class="nav-item"><a class="nav-link" routerLink="edit" routerLinkActive="active">Edit</a></li> -->
+    <!-- <li class="nav-item"><a class="nav-link" routerLink="delete" routerLinkActive="active">Delete</a></li> -->
   </ul>
   <router-outlet></router-outlet>
